firefox-trunk (15.0~a1~hg20120603r95688-0ubuntu2) UNRELEASED; urgency=low

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * Update globalmenu-extension to 3.3 prerelease r384
    - Fix LP: #1010580 - No choice of folder when adding a bookmark from
      the bookmark menu
    - Fix LP: #775080 - Thunderbird with Firetray/MinimizeToTray -
      Global menu disappears
    - Fix LP: #813775 - Hitting an assertion in dbusmenu
    - Fix LP: #861565 - No buttons in the "Show All Bookmarks" dialog
    - Fix LP: #1016081 - Menubar is not hidden when using the Firefox
      button outside of Unity
    - Fix LP: #775305 - An empty menu appears when FFChrome is installed
    - Add a small delay when opening the menu with the keyboard, so that
      the additional items are added before the menu appears. Fixes an
      issue where keyboard focus isn't on the first item when opening the
      history menu with the keyboard
  * Merge get-orig-source.mk in to mozbuild.mk
    - update debian/build/mozbuild.mk
    - remove debian/build/get-orig-source.mk
  * Drop options for things which don't change from build scripts
    - update debian/build/dump-langpack-control-entries.pl
    - update debian/build/enable-dist-patches.pl
    - update debian/build/mozbuild.mk
    - update debian/build/refresh-supported-locales.pl
  * Handle comments in locales.blacklist
    - update debian/build/refresh-supported-locales.pl
    - update debian/config/locales.blacklist
  * Install the webapprt bits
    - update debian/firefox.install.in
  * Fork the upstream text preprocessor and add support for additional
    comparison operators, which means we no longer have to add new
    defines for every distro version specific change we add
    - add debian/build/Expression.py
    - add debian/build/Preprocessor.py
    - update debian/apport/source_firefox.py.in
    - update debian/build/mozbuild.mk
    - update debian/config/mozconfig.in
    - update debian/firefox-dev.install.in