@@ -1,7 +1,7 @@
 firefox-trunk (15.0~a1~hg20120603r95688-0ubuntu2) UNRELEASED; urgency=low
 
   [ Chris Coulson <chris.coulson@canonical.com> ]
-  * Update globalmenu-extension to 3.3 prerelease r384
+  * Update globalmenu-extension to 3.3 prerelease r386
     - Fix LP: #1010580 - No choice of folder when adding a bookmark from
       the bookmark menu
     - Fix LP: #775080 - Thunderbird with Firetray/MinimizeToTray -
@@ -11,6 +11,12 @@ firefox-trunk (15.0~a1~hg20120603r95688-0ubuntu2) UNRELEASED; urgency=low
     - Fix LP: #1016081 - Menubar is not hidden when using the Firefox
       button outside of Unity
     - Fix LP: #775305 - An empty menu appears when FFChrome is installed
+    - Fix LP: #1017247 - Menubar appears in the window as well as the
+      Unity panel. Manually register our UA stylesheet rather than relying
+      on this happening via chrome registration, to work around a bug
+      in various bootstrapped third party addons (eg, pentadactyl),
+      which initialize and use the stylesheet service before extension
+      chrome is registered for non-restartless addons such as ours
     - Add a small delay when opening the menu with the keyboard, so that
       the additional items are added before the menu appears. Fixes an
       issue where keyboard focus isn't on the first item when opening the
